@@ -24,7 +24,6 @@ import org.junit.jupiter.api.Test;
 import org.monarchinitiative.exomiser.api.v1.AnalysisProto;
 import org.monarchinitiative.exomiser.api.v1.FiltersProto;
 import org.monarchinitiative.exomiser.api.v1.PrioritisersProto;
-import org.monarchinitiative.exomiser.core.analysis.util.InheritanceModeOptions;
 import org.monarchinitiative.exomiser.core.model.frequency.FrequencySource;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicitySource;
 import org.monarchinitiative.exomiser.core.prioritisers.PriorityType;
@@ -34,7 +33,6 @@ import java.util.EnumSet;
 import java.util.List;
 import java.util.Map;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -72,6 +70,10 @@ class AnalysisProtoBuilderTest {
                 .setGeneBlacklistFilter(FiltersProto.GeneBlacklistFilter.getDefaultInstance())
                 .build();
 
+        AnalysisProto.AnalysisStep alleleBalanceFilter = AnalysisProto.AnalysisStep.newBuilder()
+                .setAlleleBalanceFilter(FiltersProto.AlleleBalanceFilter.getDefaultInstance())
+                .build();
+
         PriorityType priorityType = PriorityType.PHIVE_PRIORITY;
         float minPriorityScore = 0.501f;
 
@@ -98,6 +100,7 @@ class AnalysisProtoBuilderTest {
                 .addPriorityScoreFilter(priorityType, minPriorityScore)
                 .addRegulatoryFeatureFilter()
                 .addGeneBlacklistFilter()
+                .addAlleleBalanceFilter()
                 .addFrequencyFilter(frequencyCutOff)
                 .addInheritanceFilter()
                 .build();
@@ -111,12 +114,12 @@ class AnalysisProtoBuilderTest {
 
         assertThat(analysis.getAnalysisMode(), equalTo(AnalysisProto.AnalysisMode.FULL));
 
-        List<String> freqSourceStrings = frequencySources.stream().map(FrequencySource::toString).collect(toList());
+        List<String> freqSourceStrings = frequencySources.stream().map(FrequencySource::toString).toList();
         assertThat(analysis.getFrequencySourcesList(), equalTo(freqSourceStrings));
 
         List<String> pathSourceStrings = pathogenicitySources.stream()
                 .map(PathogenicitySource::toString)
-                .collect(toList());
+                .toList();
         assertThat(analysis.getPathogenicitySourcesList(), equalTo(pathSourceStrings));
 
         //check that the order of analysis steps is preserved
@@ -125,6 +128,7 @@ class AnalysisProtoBuilderTest {
                 priorityScoreFilter,
                 regulatoryFeatureFilter,
                 blacklistFilter,
+                alleleBalanceFilter,
                 frequencyFilter,
                 inheritanceFilter
         )));
